--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "4                   183  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "4                   183  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1164,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['model_key', 'mileage', 'engine_power', 'fuel', 'paint_color',\n",
+       "       'car_type', 'private_parking_available', 'has_gps',\n",
+       "       'has_air_conditioning', 'automatic_car', 'has_getaround_connect',\n",
+       "       'has_speed_regulator', 'winter_tires', 'rental_price_per_day'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1201,9 @@
     }
    ],
    "source": [
-    "loaded_model = joblib.load('best_model_XGBoost.pkl')\n",
+    "import joblib\n",
+    "\n",
+    "loaded_model = joblib.load('GetAroundApi/best_model_XGBoost.pkl')\n",
     "random_row = data.sample(n=1, random_state=0)\n",
     "actual_value = random_row[target].values[0]\n",
     "new_data = random_row.drop(columns=[target])\n",
@@ -1185,6 +1211,13 @@
     "print(f\"Prediction for the selected row: {new_predictions[0]:.2f} $/day\")\n",
     "print(f\"Actual value for the selected row: {actual_value} $/day\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
